🏢 Add business automation translations for all 4 languages + fix HTML data-translate

--- a/index.html
+++ b/index.html
@@ -1881,11 +1881,11 @@
                     <div class="project-mockup">
                         <span style="color: var(--accent-gold)" data-translate="mockup_business_automation_title">⚡ Automatizări pentru Firma Ta</span><br>
                         <span style="color: var(--text-muted)">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span><br><br>
-                        <span style="color: var(--accent-copper)">📊 Clienți & Comenzi</span> - Vezi tot într-un singur loc<br>
-                        <span style="color: var(--accent-copper)">📅 Programări Online</span> - Clientul își face singur rezervare<br>
-                        <span style="color: var(--accent-copper)">📦 Stocuri</span> - Știi exact ce ai și ce trebuie comandat<br>
-                        <span style="color: var(--accent-copper)">💳 Facturi</span> - Se fac singure după fiecare comandă<br>
-                        <span style="color: var(--accent-copper)">📱 Notificări</span> - SMS/email automat către clienți
+                        <span style="color: var(--accent-copper)" data-translate="biz_auto_line1">📊 Clienți & Comenzi - Vezi tot într-un singur loc</span><br>
+                        <span style="color: var(--accent-copper)" data-translate="biz_auto_line2">📅 Programări Online - Clientul își face singur rezervare</span><br>
+                        <span style="color: var(--accent-copper)" data-translate="biz_auto_line3">📦 Stocuri - Știi exact ce ai și ce trebuie comandat</span><br>
+                        <span style="color: var(--accent-copper)" data-translate="biz_auto_line4">💳 Facturi - Se fac singure după fiecare comandă</span><br>
+                        <span style="color: var(--accent-copper)" data-translate="biz_auto_line5">📱 Notificări - SMS/email automat către clienți</span>
                     </div>
                 </div>
                 <div class="project-content">
@@ -1897,20 +1897,20 @@
                     </p>
                     <div class="business-examples">
                         <div class="business-example">
-                            <h4>🔧 Service Auto</h4>
-                            <p>Clientul se programează online. Primește reminder cu o zi înainte. După reparație, factura se face singură și merge pe email.</p>
+                            <h4 data-translate="biz_example1_title">🔧 Service Auto</h4>
+                            <p data-translate="biz_example1_desc">Clientul se programează online. Primește reminder cu o zi înainte. După reparație, factura se face singură și merge pe email.</p>
                         </div>
                         <div class="business-example">
-                            <h4>💇 Salon / Coafor</h4>
-                            <p>Booking online 24/7. Clientul primește SMS de confirmare. Fișa lui cu preferințe apare automat când vine.</p>
+                            <h4 data-translate="biz_example2_title">💇 Salon / Coafor</h4>
+                            <p data-translate="biz_example2_desc">Booking online 24/7. Clientul primește SMS de confirmare. Fișa lui cu preferințe apare automat când vine.</p>
                         </div>
                         <div class="business-example">
-                            <h4>🏪 Magazin / Depozit</h4>
-                            <p>Stocul se actualizează la fiecare vânzare. Alertă când un produs scade sub minim. Raport zilnic pe email.</p>
+                            <h4 data-translate="biz_example3_title">🏪 Magazin / Depozit</h4>
+                            <p data-translate="biz_example3_desc">Stocul se actualizează la fiecare vânzare. Alertă când un produs scade sub minim. Raport zilnic pe email.</p>
                         </div>
                         <div class="business-example">
-                            <h4>🏗️ Construcții / Renovări</h4>
-                            <p>Oferta se generează din calculator. Clientul semnează online. Pontajul echipei vine automat.</p>
+                            <h4 data-translate="biz_example4_title">🏗️ Construcții / Renovări</h4>
+                            <p data-translate="biz_example4_desc">Oferta se generează din calculator. Clientul semnează online. Pontajul echipei vine automat.</p>
                         </div>
                     </div>
                 </div>
@@ -2139,6 +2139,21 @@
                 cta3_btn_alt: "📚 Citește blogul",
                 stat10_title: "Bazat în Belgia",
                 stat10_desc: "Cunosc piața locală",
+                // Business Automation Section
+                biz_auto_line1: "📊 Clienți & Comenzi - Vezi tot într-un singur loc",
+                biz_auto_line2: "📅 Programări Online - Clientul își face singur rezervare",
+                biz_auto_line3: "📦 Stocuri - Știi exact ce ai și ce trebuie comandat",
+                biz_auto_line4: "💳 Facturi - Se fac singure după fiecare comandă",
+                biz_auto_line5: "📱 Notificări - SMS/email automat către clienți",
+                biz_example1_title: "🔧 Service Auto",
+                biz_example1_desc: "Clientul se programează online. Primește reminder cu o zi înainte. După reparație, factura se face singură și merge pe email.",
+                biz_example2_title: "💇 Salon / Coafor",
+                biz_example2_desc: "Booking online 24/7. Clientul primește SMS de confirmare. Fișa lui cu preferințe apare automat când vine.",
+                biz_example3_title: "🏪 Magazin / Depozit",
+                biz_example3_desc: "Stocul se actualizează la fiecare vânzare. Alertă când un produs scade sub minim. Raport zilnic pe email.",
+                biz_example4_title: "🏗️ Construcții / Renovări",
+                biz_example4_desc: "Oferta se generează din calculator. Clientul semnează online. Pontajul echipei vine automat.",
+
                 // HOME Cards,
                 home_storage_category: "",
                 home_storage_title: "",
@@ -2553,6 +2568,21 @@
                 cta3_btn_alt: "📚 Lees de blog",
                 stat10_title: "Gevestigd in België",
                 stat10_desc: "Ik ken de lokale markt",
+                // Business Automation Section
+                biz_auto_line1: "📊 Klanten & Bestellingen - Alles op één plek",
+                biz_auto_line2: "📅 Online Reserveringen - Klant boekt zelf",
+                biz_auto_line3: "📦 Voorraad - Weet exact wat je hebt en moet bestellen",
+                biz_auto_line4: "💳 Facturen - Worden automatisch gemaakt na elke bestelling",
+                biz_auto_line5: "📱 Meldingen - SMS/email automatisch naar klanten",
+                biz_example1_title: "🔧 Garage",
+                biz_example1_desc: "Klant reserveert online. Ontvangt herinnering een dag van tevoren. Na reparatie wordt factuur automatisch verstuurd.",
+                biz_example2_title: "💇 Kapsalon",
+                biz_example2_desc: "Online boeken 24/7. Klant ontvangt SMS-bevestiging. Klantenkaart verschijnt automatisch bij aankomst.",
+                biz_example3_title: "🏪 Winkel / Magazijn",
+                biz_example3_desc: "Voorraad wordt bijgewerkt bij elke verkoop. Waarschuwing wanneer product onder minimum komt. Dagelijks rapport per email.",
+                biz_example4_title: "🏗️ Bouw / Renovatie",
+                biz_example4_desc: "Offerte wordt automatisch gegenereerd. Klant tekent online. Urenregistratie komt automatisch.",
+
                 // HOME Cards,
                 home_storage_category: "Persoonlijke Opslag",
                 home_storage_title: "Onbeperkte ruimte voor foto's en bestanden",
@@ -2930,6 +2960,21 @@
                 cta3_btn_alt: "📚 Read the blog",
                 stat10_title: "Based in Belgium",
                 stat10_desc: "I know the local market",
+                // Business Automation Section
+                biz_auto_line1: "📊 Clients & Orders - See everything in one place",
+                biz_auto_line2: "📅 Online Bookings - Customer books themselves",
+                biz_auto_line3: "📦 Inventory - Know exactly what you have and need to order",
+                biz_auto_line4: "💳 Invoices - Generated automatically after each order",
+                biz_auto_line5: "📱 Notifications - SMS/email auto to customers",
+                biz_example1_title: "🔧 Auto Service",
+                biz_example1_desc: "Customer books online. Gets reminder one day before. After repair, invoice is auto-generated and emailed.",
+                biz_example2_title: "💇 Salon / Barber",
+                biz_example2_desc: "Online booking 24/7. Customer gets SMS confirmation. Their preference card appears automatically when they arrive.",
+                biz_example3_title: "🏪 Store / Warehouse",
+                biz_example3_desc: "Stock updates with every sale. Alert when product falls below minimum. Daily report by email.",
+                biz_example4_title: "🏗️ Construction / Renovation",
+                biz_example4_desc: "Quote is auto-generated. Customer signs online. Team timesheet comes automatically.",
+
                 // HOME Cards,
                 home_storage_category: "Personal Storage",
                 home_storage_title: "Unlimited space for photos and files",
@@ -3295,6 +3340,21 @@
                 cta3_btn_alt: "📚 Lire le blog",
                 stat10_title: "Basé en Belgique",
                 stat10_desc: "Je connais le marché local",
+                // Business Automation Section
+                biz_auto_line1: "📊 Clients & Commandes - Tout voir en un seul endroit",
+                biz_auto_line2: "📅 Réservations en ligne - Le client réserve lui-même",
+                biz_auto_line3: "📦 Stocks - Savoir exactement ce que vous avez et devez commander",
+                biz_auto_line4: "💳 Factures - Générées automatiquement après chaque commande",
+                biz_auto_line5: "📱 Notifications - SMS/email auto aux clients",
+                biz_example1_title: "🔧 Garage Auto",
+                biz_example1_desc: "Le client prend rendez-vous en ligne. Reçoit un rappel la veille. Après réparation, la facture est générée et envoyée automatiquement.",
+                biz_example2_title: "💇 Salon de Coiffure",
+                biz_example2_desc: "Réservation en ligne 24/7. Le client reçoit un SMS de confirmation. Sa fiche préférences apparaît automatiquement à son arrivée.",
+                biz_example3_title: "🏪 Magasin / Entrepôt",
+                biz_example3_desc: "Le stock se met à jour à chaque vente. Alerte quand un produit passe sous le minimum. Rapport quotidien par email.",
+                biz_example4_title: "🏗️ Construction / Rénovation",
+                biz_example4_desc: "Le devis se génère automatiquement. Le client signe en ligne. Le pointage de l'équipe arrive automatiquement.",
+
                 // Mockup Titles
                 mockup_storage_title: "📸 Vos Photos en Sécurité",
                 mockup_storage_line1: "Sync auto téléphone",
