📅 Simplificare date: doar anul, fără lună

--- a/blog.html
+++ b/blog.html
@@ -339,7 +339,7 @@
                     <div class="card-header">
                         <span class="card-tag" data-translate="tag_servers">Servere</span>
                         <div class="card-meta">
-                            <span>📅 <span data-translate="date_jan_2026">Ianuarie 2026</span></span>
+                            <span>📅 <span data-translate="date_jan_2026">2026</span></span>
                             <span>⏱️ 12 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
@@ -353,7 +353,7 @@
                     <div class="card-header">
                         <span class="card-tag" data-translate="tag_smarthome">Smart Home</span>
                         <div class="card-meta">
-                            <span>📅 <span data-translate="date_jan_2026">Ianuarie 2026</span></span>
+                            <span>📅 <span data-translate="date_jan_2026">2026</span></span>
                             <span>⏱️ 15 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                     <div class="card-header">
                         <span class="card-tag" data-translate="tag_ai">Automatizări AI</span>
                         <div class="card-meta">
-                            <span>📅 <span data-translate="date_jan_2026">Ianuarie 2026</span></span>
+                            <span>📅 <span data-translate="date_jan_2026">2026</span></span>
                             <span>⏱️ 10 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
                     <div class="card-header">
                         <span class="card-tag" data-translate="tag_web">Web & Business</span>
                         <div class="card-meta">
-                            <span>📅 <span data-translate="date_feb_2026">Februarie 2026</span></span>
+                            <span>📅 <span data-translate="date_feb_2026">2026</span></span>
                             <span>⏱️ 8 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
@@ -411,8 +411,8 @@
                 tag_smarthome: "Smart Home",
                 tag_ai: "Automatizări AI",
                 tag_web: "Web & Business",
-                date_jan_2026: "Ianuarie 2026",
-                date_feb_2026: "Februarie 2026",
+                date_jan_2026: "2026",
+                date_feb_2026: "2026",
                 read_time: "citire",
                 read_full: "Citește ghidul complet",
                 article1_title: "Ce este Proxmox VE 9 și cum te ajută în 2026",
