📝 Actualizare card Proxmox: focus business + AI, titlu și descriere noi în 4 limbi

--- a/blog.html
+++ b/blog.html
@@ -337,14 +337,14 @@
                 <!-- ARTICOL 1: Proxmox 2026 -->
                 <a href="blog/proxmox-ghid-incepatori-2026.html" class="article-card">
                     <div class="card-header">
-                        <span class="card-tag" data-translate="tag_servers">Servere</span>
+                        <span class="card-tag" data-translate="tag_servers">Servere & AI</span>
                         <div class="card-meta">
                             <span>📅 <span data-translate="date_jan_2026">2026</span></span>
                             <span>⏱️ 12 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
-                    <h2 data-translate="article1_title">Ce este Proxmox VE 9 și cum te ajută în 2026</h2>
-                    <p data-translate="article1_desc">Ai auzit că firmele mari plătesc mii de euro pentru servere virtuale? Cu Proxmox, poți avea aceleași capabilități gratuit, pe un computer vechi de acasă sau într-un mini-PC. Îți arăt pas cu pas cum să instalezi și să rulezi mai multe "calculatoare virtuale" pe un singur aparat.</p>
+                    <h2 data-translate="article1_title">Propriul tău server: Cum îți ajută afacerea în 2026</h2>
+                    <p data-translate="article1_desc">Vorbește cu facturile tale prin AI. Analizează vânzările instant. Găsește orice document în secunde. Un server propriu îți oferă control total asupra datelor și unelte inteligente pentru afacerea ta - fără abonamente lunare.</p>
                     <span class="read-more" data-translate="read_full">Citește ghidul complet</span>
                 </a>
                 
@@ -407,7 +407,7 @@
                 back_link: "← Înapoi la site",
                 blog_title: "Blog",
                 blog_subtitle: "Ghiduri practice pentru români din diaspora: cum să-ți digitalizezi afacerea, să-ți automatizezi casa și să economisești timp. Explicații simple, fără jargon tehnic.",
-                tag_servers: "Servere",
+                tag_servers: "Servere & AI",
                 tag_smarthome: "Smart Home",
                 tag_ai: "Automatizări AI",
                 tag_web: "Web & Business",
@@ -415,8 +415,8 @@
                 date_feb_2026: "2026",
                 read_time: "citire",
                 read_full: "Citește ghidul complet",
-                article1_title: "Ce este Proxmox VE 9 și cum te ajută în 2026",
-                article1_desc: "Ai auzit că firmele mari plătesc mii de euro pentru servere virtuale? Cu Proxmox, poți avea aceleași capabilități gratuit, pe un computer vechi de acasă sau într-un mini-PC. Îți arăt pas cu pas cum să instalezi și să rulezi mai multe \"calculatoare virtuale\" pe un singur aparat.",
+                article1_title: "Propriul tău server: Cum îți ajută afacerea în 2026",
+                article1_desc: "Vorbește cu facturile tale prin AI. Analizează vânzările instant. Găsește orice document în secunde. Un server propriu îți oferă control total asupra datelor și unelte inteligente pentru afacerea ta - fără abonamente lunare.",
                 article2_title: "Casa inteligentă în Belgia: Ghid complet Home Assistant 2026",
                 article2_desc: "Imaginează-ți: pleci de acasă și luminile se sting automat, termostatul se ajustează, și primești alertă dacă ai uitat ușa deschisă. Fără abonamente lunare, fără dependență de Google sau Amazon. Cu echipamente din Brico, IKEA sau Coolblue.",
                 article3_title: "5 Automatizări AI care economisesc ore întregi pentru afaceri mici",
@@ -429,7 +429,7 @@
                 back_link: "← Terug naar site",
                 blog_title: "Blog",
                 blog_subtitle: "Praktische gidsen voor Roemenen in België: digitaliseer je bedrijf, automatiseer je huis en bespaar tijd. Eenvoudige uitleg, zonder technisch jargon.",
-                tag_servers: "Servers",
+                tag_servers: "Servers & AI",
                 tag_smarthome: "Smart Home",
                 tag_ai: "AI Automatisering",
                 tag_web: "Web & Business",
@@ -437,8 +437,8 @@
                 date_feb_2026: "Februari 2026",
                 read_time: "leestijd",
                 read_full: "Lees de complete gids",
-                article1_title: "Wat is Proxmox VE 9 en hoe helpt het je in 2026",
-                article1_desc: "Heb je gehoord dat grote bedrijven duizenden euro's betalen voor virtuele servers? Met Proxmox krijg je dezelfde mogelijkheden gratis, op een oude computer of een mini-PC. Ik laat je stap voor stap zien hoe je meerdere \"virtuele computers\" op één apparaat installeert.",
+                article1_title: "Je eigen server: Hoe het je bedrijf helpt in 2026",
+                article1_desc: "Praat met je facturen via AI. Analyseer verkoop direct. Vind elk document in seconden. Een eigen server geeft je volledige controle over je data en slimme tools voor je bedrijf - zonder maandelijkse abonnementen.",
                 article2_title: "Slim huis in België: Complete Home Assistant Gids 2026",
                 article2_desc: "Stel je voor: je vertrekt en de lichten gaan automatisch uit, de thermostaat past zich aan, en je krijgt een melding als je de deur open hebt gelaten. Zonder maandelijkse abonnementen, zonder afhankelijkheid van Google of Amazon. Met apparatuur van Brico, IKEA of Coolblue.",
                 article3_title: "5 AI-automatiseringen die uren besparen voor kleine bedrijven",
@@ -451,7 +451,7 @@
                 back_link: "← Back to site",
                 blog_title: "Blog",
                 blog_subtitle: "Practical guides for Romanians in Belgium: digitize your business, automate your home and save time. Simple explanations, without technical jargon.",
-                tag_servers: "Servers",
+                tag_servers: "Servers & AI",
                 tag_smarthome: "Smart Home",
                 tag_ai: "AI Automation",
                 tag_web: "Web & Business",
@@ -459,8 +459,8 @@
                 date_feb_2026: "February 2026",
                 read_time: "read",
                 read_full: "Read the complete guide",
-                article1_title: "What is Proxmox VE 9 and how it helps you in 2026",
-                article1_desc: "Have you heard that big companies pay thousands of euros for virtual servers? With Proxmox, you get the same capabilities for free, on an old computer or a mini-PC. I'll show you step by step how to install and run multiple \"virtual computers\" on a single device.",
+                article1_title: "Your own server: How it helps your business in 2026",
+                article1_desc: "Talk to your invoices through AI. Analyze sales instantly. Find any document in seconds. Your own server gives you full control over your data and smart tools for your business - no monthly subscriptions.",
                 article2_title: "Smart Home in Belgium: Complete Home Assistant Guide 2026",
                 article2_desc: "Imagine: you leave home and the lights turn off automatically, the thermostat adjusts, and you get an alert if you forgot the door open. No monthly subscriptions, no dependency on Google or Amazon. With equipment from Brico, IKEA or Coolblue.",
                 article3_title: "5 AI Automations that save hours for small businesses",
@@ -473,7 +473,7 @@
                 back_link: "← Retour au site",
                 blog_title: "Blog",
                 blog_subtitle: "Guides pratiques pour les Roumains en Belgique: digitalisez votre entreprise, automatisez votre maison et gagnez du temps. Explications simples, sans jargon technique.",
-                tag_servers: "Serveurs",
+                tag_servers: "Serveurs & IA",
                 tag_smarthome: "Maison Intelligente",
                 tag_ai: "Automatisation IA",
                 tag_web: "Web & Business",
@@ -481,8 +481,8 @@
                 date_feb_2026: "Février 2026",
                 read_time: "lecture",
                 read_full: "Lire le guide complet",
-                article1_title: "Qu'est-ce que Proxmox VE 9 et comment ça vous aide en 2026",
-                article1_desc: "Avez-vous entendu que les grandes entreprises paient des milliers d'euros pour des serveurs virtuels? Avec Proxmox, vous obtenez les mêmes capacités gratuitement, sur un vieil ordinateur ou un mini-PC. Je vous montre étape par étape comment installer et exécuter plusieurs \"ordinateurs virtuels\" sur un seul appareil.",
+                article1_title: "Votre propre serveur: Comment il aide votre entreprise en 2026",
+                article1_desc: "Parlez à vos factures via l'IA. Analysez les ventes instantanément. Trouvez n'importe quel document en quelques secondes. Votre propre serveur vous donne un contrôle total sur vos données et des outils intelligents pour votre entreprise - sans abonnements mensuels.",
                 article2_title: "Maison intelligente en Belgique: Guide complet Home Assistant 2026",
                 article2_desc: "Imaginez: vous partez et les lumières s'éteignent automatiquement, le thermostat s'ajuste, et vous recevez une alerte si vous avez oublié la porte ouverte. Sans abonnements mensuels, sans dépendance à Google ou Amazon. Avec des équipements de Brico, IKEA ou Coolblue.",
                 article3_title: "5 Automatisations IA qui économisent des heures pour les petites entreprises",
