--- a/blog.html
+++ b/blog.html
@@ -337,14 +337,14 @@
                 <!-- ARTICOL 1: Proxmox 2026 -->
                 <a href="blog/proxmox-ghid-incepatori-2026.html" class="article-card">
                     <div class="card-header">
-                        <span class="card-tag" data-translate="tag_servers">Servere & AI</span>
+                        <span class="card-tag" data-translate="tag_servers">Servere</span>
                         <div class="card-meta">
                             <span>📅 <span data-translate="date_jan_2026">2026</span></span>
                             <span>⏱️ 12 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
-                    <h2 data-translate="article1_title">Propriul tău server: Cum îți ajută afacerea în 2026</h2>
-                    <p data-translate="article1_desc">Vorbește cu facturile tale prin AI. Analizează vânzările instant. Găsește orice document în secunde. Un server propriu îți oferă control total asupra datelor și unelte inteligente pentru afacerea ta - fără abonamente lunare.</p>
+                    <h2 data-translate="article1_title">Ce este Proxmox VE 9 și cum te ajută în 2026</h2>
+                    <p data-translate="article1_desc">Ai auzit că firmele mari plătesc mii de euro pentru servere virtuale? Cu Proxmox, poți avea aceleași capabilități gratuit, pe un computer vechi de acasă sau într-un mini-PC. Îți arăt pas cu pas cum să instalezi și să rulezi mai multe "calculatoare virtuale" pe un singur aparat.</p>
                     <span class="read-more" data-translate="read_full">Citește ghidul complet</span>
                 </a>
                 
@@ -357,8 +357,8 @@
                             <span>⏱️ 15 min <span data-translate="read_time">citire</span></span>
                         </div>
                     </div>
-                    <h2 data-translate="article2_title">Casa inteligentă în Belgia: Ghid complet Home Assistant 2026</h2>
-                    <p data-translate="article2_desc">Imaginează-ți: pleci de acasă și luminile se sting automat, termostatul se ajustează, și primești alertă dacă ai uitat ușa deschisă. Fără abonamente lunare, fără dependență de Google sau Amazon. Cu echipamente din Brico, IKEA sau Coolblue.</p>
+                    <h2 data-translate="article2_title">Casa care te înțelege: Automatizări care îți simplifică viața</h2>
+                    <p data-translate="article2_desc">Nu te mai gândi la lucrurile mărunte. Lumina se aprinde când intri, căldura scade când pleci, primești alertă dacă ai uitat geamul deschis. Economisești la facturi și ai mai mult confort - fără abonamente lunare.</p>
                     <span class="read-more" data-translate="read_full">Citește ghidul complet</span>
                 </a>
                 
@@ -407,7 +407,7 @@
                 back_link: "← Înapoi la site",
                 blog_title: "Blog",
                 blog_subtitle: "Ghiduri practice pentru români din diaspora: cum să-ți digitalizezi afacerea, să-ți automatizezi casa și să economisești timp. Explicații simple, fără jargon tehnic.",
-                tag_servers: "Servere & AI",
+                tag_servers: "Servere",
                 tag_smarthome: "Smart Home",
                 tag_ai: "Automatizări AI",
                 tag_web: "Web & Business",
@@ -415,10 +415,10 @@
                 date_feb_2026: "2026",
                 read_time: "citire",
                 read_full: "Citește ghidul complet",
-                article1_title: "Propriul tău server: Cum îți ajută afacerea în 2026",
-                article1_desc: "Vorbește cu facturile tale prin AI. Analizează vânzările instant. Găsește orice document în secunde. Un server propriu îți oferă control total asupra datelor și unelte inteligente pentru afacerea ta - fără abonamente lunare.",
-                article2_title: "Casa inteligentă în Belgia: Ghid complet Home Assistant 2026",
-                article2_desc: "Imaginează-ți: pleci de acasă și luminile se sting automat, termostatul se ajustează, și primești alertă dacă ai uitat ușa deschisă. Fără abonamente lunare, fără dependență de Google sau Amazon. Cu echipamente din Brico, IKEA sau Coolblue.",
+                article1_title: "Ce este Proxmox VE 9 și cum te ajută în 2026",
+                article1_desc: "Ai auzit că firmele mari plătesc mii de euro pentru servere virtuale? Cu Proxmox, poți avea aceleași capabilități gratuit, pe un computer vechi de acasă sau într-un mini-PC. Îți arăt pas cu pas cum să instalezi și să rulezi mai multe \"calculatoare virtuale\" pe un singur aparat.",
+                article2_title: "Casa care te înțelege: Automatizări care îți simplifică viața",
+                article2_desc: "Nu te mai gândi la lucrurile mărunte. Lumina se aprinde când intri, căldura scade când pleci, primești alertă dacă ai uitat geamul deschis. Economisești la facturi și ai mai mult confort - fără abonamente lunare.",
                 article3_title: "5 Automatizări AI care economisesc ore întregi pentru afaceri mici",
                 article3_desc: "Ca independent sau mic antreprenor în Belgia, timpul tău e prețios. Îți arăt 5 automatizări concrete pe care le poți implementa azi, fără cunoștințe tehnice: răspunsuri automate la emailuri, generare de facturi, programări online, și social media.",
                 article4_title: "Site pentru afacerea ta în Belgia: Ce trebuie să știi legal și practic",
@@ -429,7 +429,7 @@
                 back_link: "← Terug naar site",
                 blog_title: "Blog",
                 blog_subtitle: "Praktische gidsen voor Roemenen in België: digitaliseer je bedrijf, automatiseer je huis en bespaar tijd. Eenvoudige uitleg, zonder technisch jargon.",
-                tag_servers: "Servers & AI",
+                tag_servers: "Servers",
                 tag_smarthome: "Smart Home",
                 tag_ai: "AI Automatisering",
                 tag_web: "Web & Business",
@@ -437,10 +437,10 @@
                 date_feb_2026: "Februari 2026",
                 read_time: "leestijd",
                 read_full: "Lees de complete gids",
-                article1_title: "Je eigen server: Hoe het je bedrijf helpt in 2026",
-                article1_desc: "Praat met je facturen via AI. Analyseer verkoop direct. Vind elk document in seconden. Een eigen server geeft je volledige controle over je data en slimme tools voor je bedrijf - zonder maandelijkse abonnementen.",
-                article2_title: "Slim huis in België: Complete Home Assistant Gids 2026",
-                article2_desc: "Stel je voor: je vertrekt en de lichten gaan automatisch uit, de thermostaat past zich aan, en je krijgt een melding als je de deur open hebt gelaten. Zonder maandelijkse abonnementen, zonder afhankelijkheid van Google of Amazon. Met apparatuur van Brico, IKEA of Coolblue.",
+                article1_title: "Wat is Proxmox VE 9 en hoe helpt het je in 2026",
+                article1_desc: "Heb je gehoord dat grote bedrijven duizenden euro's betalen voor virtuele servers? Met Proxmox krijg je dezelfde mogelijkheden gratis, op een oude computer of een mini-PC. Ik laat je stap voor stap zien hoe je meerdere \"virtuele computers\" op één apparaat installeert.",
+                article2_title: "Een huis dat je begrijpt: Automatiseringen die je leven vereenvoudigen",
+                article2_desc: "Denk niet meer aan kleine dingen. Het licht gaat aan als je binnenkomt, de verwarming daalt als je vertrekt, je krijgt een melding als je het raam open hebt gelaten. Bespaar op rekeningen en krijg meer comfort - zonder maandelijkse abonnementen.",
                 article3_title: "5 AI-automatiseringen die uren besparen voor kleine bedrijven",
                 article3_desc: "Als zelfstandige of kleine ondernemer in België is je tijd kostbaar. Ik toon je 5 concrete automatiseringen die je vandaag kunt implementeren, zonder technische kennis: automatische e-mailantwoorden, factuurgeneratie, online planning en social media.",
                 article4_title: "Website voor je bedrijf in België: Wat je moet weten",
@@ -451,7 +451,7 @@
                 back_link: "← Back to site",
                 blog_title: "Blog",
                 blog_subtitle: "Practical guides for Romanians in Belgium: digitize your business, automate your home and save time. Simple explanations, without technical jargon.",
-                tag_servers: "Servers & AI",
+                tag_servers: "Servers",
                 tag_smarthome: "Smart Home",
                 tag_ai: "AI Automation",
                 tag_web: "Web & Business",
@@ -459,10 +459,10 @@
                 date_feb_2026: "February 2026",
                 read_time: "read",
                 read_full: "Read the complete guide",
-                article1_title: "Your own server: How it helps your business in 2026",
-                article1_desc: "Talk to your invoices through AI. Analyze sales instantly. Find any document in seconds. Your own server gives you full control over your data and smart tools for your business - no monthly subscriptions.",
-                article2_title: "Smart Home in Belgium: Complete Home Assistant Guide 2026",
-                article2_desc: "Imagine: you leave home and the lights turn off automatically, the thermostat adjusts, and you get an alert if you forgot the door open. No monthly subscriptions, no dependency on Google or Amazon. With equipment from Brico, IKEA or Coolblue.",
+                article1_title: "What is Proxmox VE 9 and how it helps you in 2026",
+                article1_desc: "Have you heard that big companies pay thousands of euros for virtual servers? With Proxmox, you get the same capabilities for free, on an old computer or a mini-PC. I'll show you step by step how to install and run multiple \"virtual computers\" on a single device.",
+                article2_title: "A home that understands you: Automations that simplify your life",
+                article2_desc: "Stop thinking about small things. Lights turn on when you enter, heating drops when you leave, you get alerts if you forgot a window open. Save on bills and enjoy more comfort - no monthly subscriptions.",
                 article3_title: "5 AI Automations that save hours for small businesses",
                 article3_desc: "As a freelancer or small entrepreneur in Belgium, your time is precious. I'll show you 5 concrete automations you can implement today, without technical knowledge: automatic email responses, invoice generation, online scheduling, and social media.",
                 article4_title: "Website for your business in Belgium: What you need to know",
@@ -473,7 +473,7 @@
                 back_link: "← Retour au site",
                 blog_title: "Blog",
                 blog_subtitle: "Guides pratiques pour les Roumains en Belgique: digitalisez votre entreprise, automatisez votre maison et gagnez du temps. Explications simples, sans jargon technique.",
-                tag_servers: "Serveurs & IA",
+                tag_servers: "Serveurs",
                 tag_smarthome: "Maison Intelligente",
                 tag_ai: "Automatisation IA",
                 tag_web: "Web & Business",
@@ -481,10 +481,10 @@
                 date_feb_2026: "Février 2026",
                 read_time: "lecture",
                 read_full: "Lire le guide complet",
-                article1_title: "Votre propre serveur: Comment il aide votre entreprise en 2026",
-                article1_desc: "Parlez à vos factures via l'IA. Analysez les ventes instantanément. Trouvez n'importe quel document en quelques secondes. Votre propre serveur vous donne un contrôle total sur vos données et des outils intelligents pour votre entreprise - sans abonnements mensuels.",
-                article2_title: "Maison intelligente en Belgique: Guide complet Home Assistant 2026",
-                article2_desc: "Imaginez: vous partez et les lumières s'éteignent automatiquement, le thermostat s'ajuste, et vous recevez une alerte si vous avez oublié la porte ouverte. Sans abonnements mensuels, sans dépendance à Google ou Amazon. Avec des équipements de Brico, IKEA ou Coolblue.",
+                article1_title: "Qu'est-ce que Proxmox VE 9 et comment ça vous aide en 2026",
+                article1_desc: "Avez-vous entendu que les grandes entreprises paient des milliers d'euros pour des serveurs virtuels? Avec Proxmox, vous obtenez les mêmes capacités gratuitement, sur un vieil ordinateur ou un mini-PC. Je vous montre étape par étape comment installer et exécuter plusieurs \"ordinateurs virtuels\" sur un seul appareil.",
+                article2_title: "Une maison qui vous comprend: Automatisations qui simplifient votre vie",
+                article2_desc: "Ne pensez plus aux petites choses. La lumière s'allume quand vous entrez, le chauffage baisse quand vous partez, vous recevez une alerte si vous avez oublié une fenêtre ouverte. Économisez sur les factures et profitez de plus de confort - sans abonnements mensuels.",
                 article3_title: "5 Automatisations IA qui économisent des heures pour les petites entreprises",
                 article3_desc: "En tant qu'indépendant ou petit entrepreneur en Belgique, votre temps est précieux. Je vous montre 5 automatisations concrètes que vous pouvez implémenter aujourd'hui, sans connaissances techniques: réponses automatiques aux emails, génération de factures, planification en ligne et médias sociaux.",
                 article4_title: "Site web pour votre entreprise en Belgique: Ce que vous devez savoir",
