🔧 Fix: eliminat claim YouTube adblock (nu mai funcționează)

--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
                         telefoane, laptopuri, televizoare, tablete.</span>
                     </p>
                     <ul class="project-benefits">
-                        <li data-translate="home_storage_benefit10">Zero reclame pe YouTube, jocuri, site-uri</li>
+                        <li data-translate="home_storage_benefit10">Fără reclame pe site-uri și în aplicații</li>
                         <li data-translate="home_storage_benefit11">Copiii nu pot accesa conținut nepotrivit</li>
                         <li data-translate="home_storage_benefit12">Funcționează pe toate dispozitivele automat</li>
                     </ul>
@@ -2497,7 +2497,7 @@
                 home_storage_benefit7: "Al je films, mooi georganiseerd",
                 home_storage_benefit8: "Apart account voor kinderen (met beperkingen)",
                 home_storage_benefit9: "Download naar telefoon voor vliegtuig/trein",
-                home_storage_benefit10: "Geen advertenties op YouTube, games, sites",
+                home_storage_benefit10: "Geen advertenties op websites en in apps",
                 home_storage_benefit11: "Kinderen kunnen geen ongepaste content zien",
                 home_storage_benefit12: "Werkt automatisch op alle apparaten",
                 home_storage_benefit13: "Alleen melding wanneer het telt (personen, auto's)",
@@ -2962,7 +2962,7 @@
                 home_storage_benefit7: "All your movies, beautifully organized",
                 home_storage_benefit8: "Separate account for kids (with restrictions)",
                 home_storage_benefit9: "Download to phone for plane/train",
-                home_storage_benefit10: "Zero ads on YouTube, games, websites",
+                home_storage_benefit10: "No ads on websites and in apps",
                 home_storage_benefit11: "Kids cannot access inappropriate content",
                 home_storage_benefit12: "Works automatically on all devices",
                 home_storage_benefit13: "Alert only when it matters (people, cars)",
@@ -3378,7 +3378,7 @@
                 home_storage_benefit7: "All your movies, beautifully organized",
                 home_storage_benefit8: "Separate account for kids (with restrictions)",
                 home_storage_benefit9: "Download to phone for plane/train",
-                home_storage_benefit10: "Zero ads on YouTube, games, websites",
+                home_storage_benefit10: "No ads on websites and in apps",
                 home_storage_benefit11: "Kids cannot access inappropriate content",
                 home_storage_benefit12: "Works automatically on all devices",
                 home_storage_benefit13: "Alert only when it matters (people, cars)",
